[1.4.0] refacto etape 1